# win-diff-patch

./: Cargo.toml  README.md  build.rs  build.sh  Примеры работы.txt
src/: longhelp_en.txt  longhelp_ru.txt  main.rs
