[package]
name = "win-diff-patch"
version = "1.0.0"
edition = "2021"
authors = ["buba5473"]
description = "High-performance 3-in-1 text and binary diff, patch, and split utility optimized for Windows 10/11 (AMD64)"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo", "help"] }
rayon = "1.8"
memmap2 = "0.9"
similar = { version = "2.4", features = ["inline"] }
patch = "0.7"
walkdir = "2.4"
regex = "1.10"
sys-locale = "0.3"
indicatif = { version = "0.17", features = ["rayon"] }
lz4_flex = "0.11"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
